[package]
name = "qcow"
version = "1.0.0"
edition = "2018"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
description = "A library for working with QEMU qcow images"
homepage = "https://panda.re"
repository = "https://github.com/panda-re/qcow-rs"
license = "MIT"
keywords = ["qemu", "qcow", "qcow2", "disk", "image"]
category = "emulators"
readme = "README.md"

[dependencies]
binread = "2.2"
modular-bitfield = "0.11.2"
thiserror = "1"
flate2 = { version = "1" , features = ["zlib-ng-compat"], default-features = true }
zstd = "0.9.0"
