[package]
name = "qcow-cli"
version = "0.2.0"
edition = "2018"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
description = "A CLI for working with qemu qcow files"
homepage = "https://panda.re"
repository = "https://github.com/panda-re/qcow-rs"
license = "MIT"
keywords = ["qemu", "qcow", "qcow2", "disk", "image"]
category = "emulators"

[[bin]]
name = "qcow"
path = "src/main.rs"

[dependencies]
qcow = { path = "..", version = "1.1" }
bootsector = "0.1.5"
humansize = "1.1.1"
gpt-partition-type = "0.1"
ext4 = "0.9"
positioned-io = "0.2"
tabled = { version = "0.2.2", features = ["color"] }
owo-colors = "2.0.0"
bat = "0.18.2"
syntect = "4.5.0"
atty = "0.2.14"
structopt = "0.3.22"
chrono = "0.4.19"
libc = "0.2.98"
